@@ -22,7 +22,7 @@
 require_once dirname(__FILE__).'/js/monitoring.triggerComment.js.php';
 
 $commentWidget = new CWidget('triggerComment');
-$commentWidget->addPageHeader(_('TRIGGER COMMENTS'));
+$commentWidget->addPageHeader(_('TRIGGER DESCRIPTION'));
 
 // create form
 $commentForm = new CForm();
@@ -36,11 +36,11 @@ $commentTextArea = new CTextArea('comments', CMacrosResolverHelper::resolveTrigg
 	'rows' => 25, 'width' => ZBX_TEXTAREA_BIG_WIDTH, 'readonly' => $this->data['isCommentExist']
 ));
 $commentTextArea->attr('autofocus', 'autofocus');
-$commentFormList->addRow(_('Comments'), $commentTextArea);
+$commentFormList->addRow(_('Description'), $commentTextArea);
 
 // append tabs to form
 $commentTab = new CTabView();
-$commentTab->addTab('commentTab', _s('Comments for "%s".', $this->data['trigger']['description']), $commentFormList);
+$commentTab->addTab('commentTab', _s('Description for "%s".', $this->data['trigger']['description']), $commentFormList);
 $commentForm->addItem($commentTab);
 
 // append buttons to form
